--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
-rootProject.name = 'quizzzz'
+rootProject.name = 'quizzzz' // TODO this is last year's title; we need to change this
 
 include 'client'
 include 'server'
