Connect mongodb to server + initialize card repository + create card routes + api docs

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 # show auto-generated SQL commands
 #spring.jpa.hibernate.show_sql=true
+spring.data.mongodb.uri=mongodb://localhost:27017/talio
+spring.data.mongodb.database=talio
+
