--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -7,13 +7,12 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #spring.datasource.url=jdbc:h2:mem:testdb
 # ... persisted on disk (in project directory)
 # TODO change datasourcequizzzz
-spring.datasource.url=jdbc:h2:file:./quizzzz
+spring.datasource.url=jdbc:h2:file:./talio
 # enable DB view on http://localhost:8080/h2-console
 spring.h2.console.enabled=true
 # strategy for table (re-)generation
 spring.jpa.hibernate.ddl-auto=update
 # show auto-generated SQL commands
 #spring.jpa.hibernate.show_sql=true
-spring.data.mongodb.uri=mongodb://localhost:27017/talio
-spring.data.mongodb.database=talio
+
 
