update schema and common entities

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -14,5 +14,6 @@ spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 # show auto-generated SQL commands
 #spring.jpa.hibernate.show_sql=true
+spring.sql.init.mode=always
 
 
