Started adding tests for sockets

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -11,5 +11,6 @@ dependencies {
     runtimeOnly 'com.h2database:h2'
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
     implementation 'org.springframework.session:spring-session-core'
+    testImplementation 'org.awaitility:awaitility:4.2.0'
     implementation project(":commons")
 }
