--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -6,7 +6,6 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 # ... purely in-memory, wiped on restart, but great for testing
 #spring.datasource.url=jdbc:h2:mem:testdb
 # ... persisted on disk (in project directory)
-# TODO change datasourcequizzzz
 spring.datasource.url=jdbc:h2:file:./talio
 # enable DB view on http://localhost:8080/h2-console
 spring.h2.console.enabled=true
@@ -14,6 +13,4 @@ spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 # show auto-generated SQL commands
 #spring.jpa.hibernate.show_sql=true
-spring.sql.init.mode=always
-
-
+spring.sql.init.mode=never
